# mujoco_contact_surfaces_plugin

./: CMakeLists.txt  README.md
config/: myrmex_sensor.yaml
include/mujoco_contact_surfaces_plugin/: common_types.h  contact_surfaces_plugin.h  flat_tactile_sensor.h  plugin_utils.h  tactile_sensor_base.h  taxel_sensor.h
model/: myrmex_surface_world.xml
src/: contact_surfaces_plugin.cc  contact_surfaces_plugin.cpp  flat_tactile_sensor.cpp  tactile_sensor_base.cpp  taxel_sensor.cpp
